# camlkit-bindings-generator

./: .gitignore  README.md  camlkit-bindings-generator.opam  dune-project
.github/workflows/: main.yml
bridgesupport/: dune  main.ml
generate/: dune  main.ml
inspect/: dune  main.ml
lib/: bind_c.ml  bind_objc.ml  bridgesupport.ml  dune  emit_c.ml  enc_lexer.mll  enc_parser.mly  encode.ml  lib.ml  objc_type.ml  util.ml
test/test-bridgesupport/: dune  test_bridgesupport.ml
test/test-parse-enc/: dune  test_parse_enc.ml
